contour-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: kubeapp
  labels:
    app: kubeapp
spec:
  defaultBackend:
    service:
      name: kubeapp
      port:
        number: 80
